--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v1
+    - uses: actions/cache@v2.1.3
       with:
         path: ~/.m2
         key: m2-${{ hashFiles('**/deps.edn') }}
+        restore-keys: |
+          m2-
     - uses: DeLaGuardo/setup-graalvm@master
       with:
         graalvm-version: '21.0.0.java11'
