--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: buildjet-4vcpu-ubuntu-2004
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 10 # so that today's tags are retrieved
     - uses: actions/cache@v2.1.6
       with:
         path: ~/.m2
@@ -27,10 +25,8 @@ jobs:
     - run: make compile
     - name: "Generate tag"
       run: |
-        COMMIT_DATE=$(git show -s --format=%cd --date=format:%Y%m%d HEAD)
-        LAST=$(git tag -l "$COMMIT_DATE*" --sort v:refname | tail -1 | awk -F- '{print $NF}')
-        N=$(expr ${LAST} + 1)
-        echo "tag_name=${COMMIT_DATE}-${N}" >> $GITHUB_ENV
+        COMMIT_DATE=$(git show -s --format=%cd --date=format:%y%m%d-%H%M HEAD)
+        echo "tag_name=${COMMIT_DATE}" >> $GITHUB_ENV
     - uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
