--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,23 +6,24 @@ on:
 
 jobs:
   build:
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: buildjet-8vcpu-ubuntu-2204
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/cache@v3
+    - uses: buildjet/cache@v3
       with:
         path: ~/.m2
         key: m2-${{ hashFiles('**/deps.edn') }}
         restore-keys: |
           m2-
-    - uses: DeLaGuardo/setup-graalvm@master
+    - uses: graalvm/setup-graalvm@v1
       with:
-        graalvm-version: 'vm-22.3.3'
+        java-version: '20'
+        distribution: 'graalvm-community'
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        components: 'js'
     - uses: DeLaGuardo/setup-clojure@master
       with:
         cli: '1.11.1.1347'
-    - run: gu install native-image
-    - run: gu install js
     - run: make compile
     - name: "Generate tag"
       run: |
