--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,14 @@ jobs:
           m2-
     - uses: graalvm/setup-graalvm@v1
       with:
-        java-version: '20'
+        java-version: '21'
+        version: '21.0.2'
         distribution: 'graalvm-community'
         github-token: ${{ secrets.GITHUB_TOKEN }}
         components: 'js'
     - uses: DeLaGuardo/setup-clojure@master
       with:
-        cli: '1.11.1.1429'
+        cli: '1.11.1.1435'
     - run: make compile
     - name: "Generate tag"
       run: |
